--- a/templates/base.html
+++ b/templates/base.html
@@ -149,21 +149,21 @@
 									<li>
 									<button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
 										<i class="bi bi-sun-fill me-2 opacity-50"><use href="#sun-fill"></use></i>
-										Light
+										{% translate "LIGHT" %}
 										<i class="bi bi-check2 ms-auto d-none"><use href="#check2"></use></i>
 									</button>
 									</li>
 									<li>
 									<button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="dark" aria-pressed="true">
 										<i class="bi bi-moon-stars-fill me-2 opacity-50"><use href="#moon-stars-fill"></use></i>
-										Dark (experimental)
+										{% translate "DARK" %}
 										<i class="bi bi-check2 ms-auto d-none"><use href="#check2"></use></i>
 									</button>
 									</li>
 									<li>
 									<button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="auto" aria-pressed="false">
 										<i class="bi bi-circle-half me-2 opacity-50"><use href="#circle-half"></use></i>
-										Auto
+										{% translate "SYSTEM" %}
 										<i class="bi bi-check2 ms-auto d-none"><use href="#check2"></use></i>
 									</button>
 									</li>
