--- a/userprofile/templates/userprofile/login.html
+++ b/userprofile/templates/userprofile/login.html
@@ -124,7 +124,7 @@
 								<button type="button" class="btn-close" aria-label="{% translate 'CLOSE_ERROR_LIST' %}" data-bs-dismiss="alert"></button>
 							</div>
 						{% endif %}
-							<div class="form-group{% if form.username.errors %} has-error{% endif %}">
+							<div class="form-group{% if form.username.errors %} is-invalid{% endif %}">
 								<label class="form-label"
 								for="{{ form.username.id_for_label }}">{% translate "USERNAME" %}</label>
 								<input class="form-control" id="{{ form.username.id_for_label }}" type="text"
@@ -133,7 +133,7 @@
 									<span class="help-block">{{ error }}</span>
 								{% endfor %}
 							</div>
-							<div class="form-group{% if form.password.errors %} has-error{% endif %}">
+							<div class="form-group{% if form.password.errors %} is-invalid{% endif %}">
 								<label class="form-label"
 								for="{{ form.password.id_for_label }}">{% translate "PASSWORD" %}</label>
 								<input class="form-control" id="{{ form.password.id_for_label }}" type="password"
