--- a/edit_course/templates/edit_course/edit_gitmanager.html
+++ b/edit_course/templates/edit_course/edit_gitmanager.html
@@ -25,7 +25,7 @@
         <button type="submit" class="aplus-button--default aplus-button--md">
             {% translate "SUBMIT" %}
         </button>
-        <div class="d-none progress">
+        <div class="d-none progress mt-3">
         <div class="aplus-progress-bar aplus-progress-bar-striped progress-bar-animated" role="progressbar" style="width:100%;">
             {% translate "UPDATING_GITMANAGER" %}
         </div>
