--- a/assets/sass/pages/_assessment.scss
+++ b/assets/sass/pages/_assessment.scss
@@ -1,6 +1,8 @@
 @import "../mixins/sticky_submission_scroll";
 
 .assessment-panel {
+	padding-bottom: 1em;
+
 	& > .card-header {
 		position: sticky;
 		top: 0;
