--- a/assets/sass/legacy/_main.scss
+++ b/assets/sass/legacy/_main.scss
@@ -237,7 +237,7 @@ iframe {
 }
 @media (min-width: 768px) {
 	#course-content {
-        padding-left: 16%;
+        padding-left: 16vw;
         &.sidebar-collapsed {
             padding-left: 48px;
         }
