--- a/edit_course/templates/edit_course/submissiontag_list.html
+++ b/edit_course/templates/edit_course/submissiontag_list.html
@@ -41,7 +41,7 @@
 					<i class="bi-pencil-square" aria-hidden="true"></i>
 					{% translate "EDIT" %}
 				</a>
-				<a href="{{ tag|url:'course-submission-tags-remove' }}" class="aplus-button--secondary aplus-button--xs" role="button">
+				<a href="{{ tag|url:'course-submission-tags-remove' }}" class="aplus-button--danger aplus-button--xs" role="button">
 					<i class="bi-x-lg" aria-hidden="true"></i>
 					{% translate "REMOVE" %}
 				</a>
