--- a/exercise/templates/exercise/exercise_base.html
+++ b/exercise/templates/exercise/exercise_base.html
@@ -107,7 +107,7 @@
 					{% if not disable_staff_nav %}
 						{% if is_teacher or exercise.allow_assistant_viewing %}
 						<a href="{{ exercise|url:'submission-list' }}" role="button" class="aplus-button--secondary aplus-button--xs">
-							<i class="bi-list" aria-hidden="true"></i>
+							<i class="bi-list-ul" aria-hidden="true"></i>
 							{% translate "VIEW_ALL_SUBMISSIONS" %}
 						</a>
 						{% endif %}
