--- a/exercise/templates/exercise/staff/_assessment_panel.html
+++ b/exercise/templates/exercise/staff/_assessment_panel.html
@@ -6,7 +6,7 @@
 {% load static %}
 
 <div class="card assessment-panel">
-	<div class="card-header bg-body-tertiary">
+	<div class="card-header bg-body-secondary">
 		{# Heading: default mode #}
 		<div class="assessment-bar assessment-toggle{% if form.errors %} d-none{% endif %}">
 			<div class="assessment-bar-fill assessment-bar-text d-flex flex-row justify-content-between align-items-center">
