--- a/templates/base.html
+++ b/templates/base.html
@@ -119,7 +119,7 @@
 				<div class="container-fluid flex-nowrap py-1">
 					<div class="d-flex align-items-center ps-2">
 						<a class="navbar-brand btn btn-link py-1" href="{% url 'home' %}">{% brand_name %}</a>
-						<span class="navbar-brand d-none d-md-flex" style="font-size: 0.85em">{{ APLUS_VERSION }}</span>
+						<span class="navbar-brand d-none d-md-flex lh-sm" style="font-size: 0.85em">{{ APLUS_VERSION }}</span>
 						<ul class="navbar-nav navbar-dropdown">
 							<li role="presentation" class="dropdown">
 								<a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle" data-bs-toggle="dropdown" role="button"
@@ -140,10 +140,10 @@
 					<div class="d-flex gap-2">
 						<ul class="navbar-nav navbar-dropdown user-menu flex-row align-items-center">
 							<li class="nav-item dropdown">
-								<a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false"
+								<a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center gap-1" id="bd-theme" type="button" aria-expanded="false"
 									data-bs-toggle="dropdown" data-bs-display="static" aria-label="Theme">
 									<i id="theme-switcher-icon" class="bi bi-moon-stars-fill theme-icon-active"><use href="#moon-stars-fill"></use></i>
-									<span class="d-none d-md-block ms-1" id="bd-theme-text">{% translate "THEME" %}</span>
+									<span class="d-none d-md-block" id="bd-theme-text">{% translate "THEME" %}</span>
 								</a>
 								<ul class="dropdown-menu dropdown-menu-end" style="position: absolute; right: 0; left: auto" aria-labelledby="bd-theme-text">
 									<li>
@@ -172,14 +172,14 @@
 							{% if show_language_toggle %}
 							<li class="nav-item">
 								{% if request.LANGUAGE_CODE == 'fi' %}
-								<a class="btn btn-link py-2 px-2 px-lg-2 d-flex align-items-center" href="?hl=en" role="button" aria-label="{% translate 'CHANGE_LANGUAGE_TO_ENGLISH' %}" hreflang="en" onclick="changeLanguage('en'); return false;">
+								<a class="btn btn-link py-2 px-2 px-lg-2 d-flex align-items-center gap-1" href="?hl=en" role="button" aria-label="{% translate 'CHANGE_LANGUAGE_TO_ENGLISH' %}" hreflang="en" onclick="changeLanguage('en'); return false;">
 									<i class="bi bi-translate" alt=""></i>
-									<span class="ms-1">EN</span>
+									<span>EN</span>
 								</a>
 								{% else %}
-								<a class="btn btn-link py-2 px-2 px-lg-2 d-flex align-items-center" href="?hl=fi" role="button" aria-label="{% translate 'CHANGE_LANGUAGE_TO_FINNISH' %}" hreflang="fi" onclick="changeLanguage('fi'); return false;">
+								<a class="btn btn-link py-2 px-2 px-lg-2 d-flex align-items-center gap-1" href="?hl=fi" role="button" aria-label="{% translate 'CHANGE_LANGUAGE_TO_FINNISH' %}" hreflang="fi" onclick="changeLanguage('fi'); return false;">
 									<i class="bi bi-translate" alt=""></i>
-									<span class="ms-1">FI</span>
+									<span>FI</span>
 								</a>
 								{% endif %}
 							</li>
@@ -188,10 +188,10 @@
 							{% group_select %}
 							{% notification_menu %}
 							<li role="presentation" class="profile-menu nav-item dropdown">
-								<a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown" role="button"
+								<a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center gap-1" data-bs-toggle="dropdown" role="button"
 									aria-haspopup="true" aria-expanded="false">
 									<i class="bi-person-fill" aria-hidden="true" data-testid="user-menu"></i>
-									<span class="d-none d-md-inline ms-1">{{ user.first_name }} {{ user.last_name }}</span>
+									<span class="d-none d-md-inline">{{ user.first_name }} {{ user.last_name }}</span>
 								</a>
 								<ul class="dropdown-menu" style="position: absolute; right: 0; left: auto">
 									<li role="presentation">
@@ -208,9 +208,9 @@
 							</li>
 							{% else %}
 							<li class="nav-item" role="presentation">
-								<a class="nav-link btn btn-link d-flex" href="{% url 'login' %}{% login_next %}">
+								<a class="nav-link btn btn-link d-flex gap-1" href="{% url 'login' %}{% login_next %}">
 									<i class="bi-box-arrow-in-right" aria-hidden="true"></i>
-									<span class="d-none d-md-block ms-1">{% translate "LOG_IN"%}</span>
+									<span class="d-none d-md-block">{% translate "LOG_IN"%}</span>
 								</a>
 							</li>
 							{% endif %}
