--- a/course/templates/course/_group_select.html
+++ b/course/templates/course/_group_select.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 {% load course %}
 {% if groups %}
-<li role="presentation" class="menu-groups nav-item dropdown" style="max-width: 20vw; text-overflow: ellipsis;">
-  <a href="#" class="btn btn-link py-2 px-0 px-lg-2 dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+<li role="presentation" class="menu-groups nav-item dropdown">
+  <a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
     <span class="selection">
       <span id="group-selection-icon">
         {% if "alone" in selected %}
@@ -11,8 +11,10 @@
           <i class="bi-people-fill" aria-hidden="true"></i>
         {% endif %}
       </span>
-      <span id="group-selection-label" class="d-none d-lg-inline">
-        {{ selected }}
+      <span id="group-selection-label" class="d-none d-md-inline-flex align-items-center">
+        <span style="max-width: 15vw; text-overflow: ellipsis; overflow: hidden;">
+          {{ selected }}
+        </span>
       </span>
       <span class="caret" aria-hidden="true"></span>
     </span>
