--- a/course/templates/course/course_base.html
+++ b/course/templates/course/course_base.html
@@ -33,18 +33,19 @@
 {% block content %}
 <div data-taggings="{{ taggings|join:' ' }}" class="row">
 	{% block course_sidebar %}
-	<div class="offcanvas-md offcanvas-start navbar-nav-scroll col-md-2" id="bs-navbar-collapse">
-		<button
-			class="aplus-button--secondary course-sidebar-expander d-none"
-			title="{% translate 'EXPAND_SIDEBAR' %}"
-			aria-label="{% translate 'EXPAND_SIDEBAR' %}"
-			data-bs-toggle="tooltip" data-bs-placement="right" title="{% translate 'EXPAND_SIDEBAR' %}"
-		>
-			<i class="bi-layout-text-sidebar" aria-hidden="true"></i>
-		</button>
+	<div class="offcanvas-md offcanvas-md-start offcanvas-top navbar-nav-scroll col-md-2" id="bs-navbar-collapse">
 		<div class="offcanvas-body">
-			<button type="button" class="btn-close float-end d-none" data-bs-dismiss="offcanvas" data-bs-target="#bs-navbar-collapse" aria-label="Close"></button>
-			<nav class="course-menu" id="main-course-menu" aria-labelledby="course-menu-heading">
+			<button
+				class="aplus-button--secondary course-sidebar-expander d-none"
+				title="{% translate 'EXPAND_SIDEBAR' %}"
+				aria-label="{% translate 'EXPAND_SIDEBAR' %}"
+				data-bs-toggle="tooltip"
+				data-bs-placement="right"
+			>
+				<i class="bi-layout-text-sidebar" aria-hidden="true"></i>
+			</button>
+			<nav class="course-menu position-relative" id="main-course-menu" aria-labelledby="course-menu-heading">
+				<button type="button" class="btn-close d-none position-absolute end-0" data-bs-dismiss="offcanvas" data-bs-target="#bs-navbar-collapse" aria-label="Close"></button>
 				<ul class="nav nav-pills nav-stacked flex-column" aria-orientation="vertical">
 					{% include "course/_course_menu.html" %}
 				</ul>
