--- a/exercise/templates/exercise/exercise_plain.html
+++ b/exercise/templates/exercise/exercise_plain.html
@@ -117,7 +117,7 @@
 										open it due to personal extensions. However, this saves some database queries.
 										{% endcomment %}
 										{% if exercise.model_answers %}
-											<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button" role="button" href="{{ exercise|url:'exercise-model' }}">
+											<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button my-1" role="button" href="{{ exercise|url:'exercise-model' }}">
 												<i class="bi-file-earmark-check" aria-hidden="true"></i>
 												{% translate "SHOW_MODEL_ANSWER" %}
 											</a>
@@ -125,14 +125,14 @@
 									{% endif %}
 									{% if is_course_staff or is_student %}
 										{% if exercise.templates %}
-											<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button" role="button" href="{{ exercise|url:'exercise-template' }}">
+											<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button my-1" role="button" href="{{ exercise|url:'exercise-template' }}">
 												<i class="bi-file-post-fill" aria-hidden="true"></i>
 												{% translate "SHOW_EXERCISE_TEMPLATE" %}
 											</a>
 										{% endif %}
 									{% endif %}
 									{% if is_course_staff %}
-										<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button" role="button" href="{{ exercise|url:'submission-list' }}">
+										<a class="nav-link aplus-button--secondary aplus-button--sm page-modal exercise-nav-button my-1" role="button" href="{{ exercise|url:'submission-list' }}">
 											<i class="bi-files" aria-hidden="true"></i>
 											{% translate "VIEW_ALL_SUBMISSIONS" %}
 										</a>
